# LaxyToolbox

./: .gitignore  CHANGELOG.md  LICENSE  README.md  THIRD_PARTY.md  app.py  build.ps1  downloader.py  encoder.py  gui_build.py  gui_config.py  gui_downloads.py  gui_edits.py  gui_notes.py  gui_queue.py  gui_run.py  gui_settings.py  models.py  planner.py  probe.py  pyproject.toml  requirements.txt  sysutil.py  theme.py  updater.py  widgets.py  x265_2pass.log.cutree
.github/workflows/: ci.yml
docs/: DEVELOPMENT.md  release-notes-v1.2.0.md
tests/: conftest.py  test_app_helpers.py  test_downloader.py  test_encoder.py  test_ffmpeg_smoke.py  test_planner.py  test_probe.py  test_sysutil.py  test_updater.py
